--- a/ui/src/app/views/workspace/component.css
+++ b/ui/src/app/views/workspace/component.css
@@ -2,6 +2,13 @@
   display: flex;
 }
 
+.greeting {
+  color: #2F2E7E;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 24px;
+}
+
 .description-text {
   color: #333;
   width: 100ex;
