--- a/ui/src/app/views/notebook-list/component.css
+++ b/ui/src/app/views/notebook-list/component.css
@@ -24,6 +24,7 @@
 
 .card-area {
   display: flex;
+  flex-wrap: wrap;
   justify-content: flex-start;
 }
 
@@ -33,5 +34,3 @@
   line-height: 24px;
   font-weight: 500;
 }
-
-
