--- a/ui/src/app/views/notebook-list/component.html
+++ b/ui/src/app/views/notebook-list/component.html
@@ -22,6 +22,13 @@
       <div class="item-type notebook"><div>NB</div></div>
     </div>
   </div>
+  <div class="help-tip" style="position: relative; top: 100px; left: 30px" *ngIf="noCohorts">
+    <div (click)="dismissTip()"><clr-icon shape="times" style="position: absolute; top: 0px; right: 0px"></clr-icon></div>
+    <div class="help-tip-title">Help Tip</div>
+    <div class="help-tip-text">One of the first things you may want to do is create a cohort and then
+      create a Notebook to analyze data
+    </div>
+  </div>
 </div>
 
 <clr-modal [(clrModalOpen)]="notebookError">
