--- a/ui/src/app/views/workspace/component.html
+++ b/ui/src/app/views/workspace/component.html
@@ -27,10 +27,11 @@
       <h4 class="subheader">Research Purpose</h4>
       <div class="description-text">
         {{workspace.description}}
-    <div style="position: relative; left: 250px; top: -200px">
-      <div class="help-tip" style="height: 128px; width: 293px" *ngIf="newWorkspace">
-        <div class="help-tip help-tip-title">Welcome to your workspace!</div>
-        <div class="help-tip help-tip-text">One of the first things you may want to do is create a cohort and a notebook</div>
+      </div>
+      <div class="help-tip" style="position: relative; left: 250px; top: -260px" *ngIf="newWorkspace">
+        <div (click)="dismissTip()"><clr-icon shape="times" style="position: absolute; top: 0px; right: 0px"></clr-icon></div>
+        <div class="help-tip-title">Welcome to your workspace!</div>
+        <div class="help-tip-text">One of the first things you may want to do is create a cohort and a notebook</div>
       </div>
     </div>
   </div>
