--- a/ui/src/app/views/workspace/component.html
+++ b/ui/src/app/views/workspace/component.html
@@ -29,7 +29,7 @@
         {{workspace.description}}
       </div>
       <div class="help-tip" style="position: relative; left: 250px; top: -260px" *ngIf="newWorkspace">
-        <div (click)="dismissTip()"><clr-icon shape="times" style="position: absolute; top: 0px; right: 0px"></clr-icon></div>
+        <div (click)="dismissTip()" style="cursor: pointer"><clr-icon shape="times" size="10px" style="position: absolute; top: 10px; right: 9px"></clr-icon></div>
         <div class="help-tip-title">Welcome to your workspace!</div>
         <div class="help-tip-text">One of the first things you may want to do is create a cohort and a notebook</div>
       </div>
