--- a/ui/src/app/views/notebook-list/component.html
+++ b/ui/src/app/views/notebook-list/component.html
@@ -22,8 +22,8 @@
       <div class="item-type notebook"><div>NB</div></div>
     </div>
   </div>
-  <div class="help-tip" style="position: relative; top: 100px; left: 30px" *ngIf="noCohorts">
-    <div (click)="dismissTip()"><clr-icon shape="times" style="position: absolute; top: 0px; right: 0px"></clr-icon></div>
+  <div class="help-tip" style="position: relative; top: 23px; left: 30px" *ngIf="noCohorts">
+    <div (click)="dismissTip()" style="cursor: pointer"><clr-icon shape="times" size="10px" style="position: absolute; top: 10px; right: 9px"></clr-icon></div>
     <div class="help-tip-title">Help Tip</div>
     <div class="help-tip-text">One of the first things you may want to do is create a cohort and then
       create a Notebook to analyze data
