footer css class name

--- a/ui/src/app/views/homepage/component.html
+++ b/ui/src/app/views/homepage/component.html
@@ -101,7 +101,7 @@
         <div class="row">
             <div class="footerTitle">How to Use the AoU Researcher Workbench</div>
         </div>
-        <div class="row options">
+        <div class="row textGroup">
             <div class="footerText">
                 <div class="title">Working Within Researcher Workbench</div>
                 <ul class="bullet">
@@ -132,3 +132,4 @@
         </div>
     </div>
 </div>
+
