--- a/ui/src/app/views/homepage/component.html
+++ b/ui/src/app/views/homepage/component.html
@@ -67,20 +67,20 @@
                     <div class="col">
                         <div class="row linkGroup">
                             <div class="col">
-                                <a class="links" [routerLink]="" (click)="addWorkspace()">Create a
+                                <a class="links" (click)="addWorkspace()">Create a
                                     workspace</a>
                             </div>
                             <div class="col">
-                                <a class="links" [routerLink]="">See All Notebooks</a>
+                                <a class="links disabled">See All Notebooks</a>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col">
-                                <a class="links" [routerLink]="" (click)="listWorkspaces()">See All
+                                <a class="links" (click)="listWorkspaces()">See All
                                     Workspaces</a>
                             </div>
                             <div class="col">
-                                <a class="links" [routerLink]="">See All Cohorts</a>
+                                <a class="links disabled">See All Cohorts</a>
                             </div>
                         </div>
                     </div>
