spinner on typing. top 100 no search.

--- a/public-ui/src/app/views/quick-search/quick-search.component.css
+++ b/public-ui/src/app/views/quick-search/quick-search.component.css
@@ -4,3 +4,16 @@
 .white-card-box {
     padding: .25rem;
 }
+
+.search-result p.card-text {
+    height: 2rem;
+}
+
+/* result card */
+.white-card-box.search-result {
+    height: 240px;
+    width: 240px;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    padding: .5rem 1rem;
+}
