--- a/public-ui/src/app/views/ehr-view/ehr-view.component.html
+++ b/public-ui/src/app/views/ehr-view/ehr-view.component.html
@@ -43,10 +43,22 @@
 </div>
 
 <div class="row ">
-  <div class="col-md-8 col-sm-10 col-xs-11 white-card-box flex-xs-middle search-input-full">
+  <!-- different style search box
+    <div class="col-md-8 col-sm-10 col-xs-11 white-card-box flex-xs-middle search-input-full">
     <div class="search-wrapper ">
       <clr-icon shape="search" class="input-icon-absolute is-info"></clr-icon>
       <input type="text" id="search-db" placeholder="Keyword Search" [formControl]="searchText" autofocus>
+    </div>
+  </div>-->
+
+  <div class="white-card-box flex-items-xs-middle col-md-8 col-sm-10 col-xs-11" >
+    <div class="row search flex-items-xs-between">
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 flex-xs-middle search-input-full">
+        <div class="search-wrapper">
+          <clr-icon shape="search" class="input-icon-absolute is-info"></clr-icon>
+          <input type="text" id="search-db" placeholder="Keyword Search" [formControl]="searchText" autofocus>
+        </div>
+      </div>
     </div>
   </div>
 
@@ -71,16 +83,21 @@
       <div class="col-md-4 col-sm-6 col-xs-6 card-stat" >
         {{items.length}}
       </div>
-        <div class="col-md-8 col-sm-6 col-xs-6 flex-xs-middle card-text">
+        <div *ngIf="searchText.value.length > 0" class="col-md-8 col-sm-6 col-xs-6 flex-xs-middle card-text">
           matching medical concepts.
+        </div>
+        <div *ngIf="searchText.value.length === 0" class="col-md-8 col-sm-6 col-xs-6 flex-xs-middle card-text">
+          Showing top {{items.length}} concepts for this domain.
         </div>
       </div>
 
-      <div class="row">
-        <div class="col-xs-12 card-text">
-          Total participants: {{totalParticipants}}
+      <!-- <div class="row">
+        <div class="col-xs-12 card-text bottom">
+          Total participants: {{totalParticipants | number}}
         </div>
       </div>
+      -->
+
     </div>
 
     <div class="col-md-8 col-sm-6 col-xs-12 chart-wrapper flex-xs-middle">
@@ -116,7 +133,7 @@
           <div class="col-md-1 grid-header flex-xs-middle info-text"> View graphs </div>
 
         </div>
-        <div class="row expandable-grid-row" (click)="r.expanded = !r.expanded"
+        <div class="row expandable-grid-row"
              *ngFor="let r of items.concat(standardConcepts), let i = index"
              [ngClass]="{'expanded-grid-row': r.expanded}" >
           <div class="col-md-4 flex-xs-middle" innerHtml="{{i+1}}. {{r.conceptName | highlightSearch : prevSearchText}}"> </div>
