--- a/public-ui/src/app/views/survey-view/survey-view.component.css
+++ b/public-ui/src/app/views/survey-view/survey-view.component.css
@@ -37,6 +37,7 @@
     opacity: 1;
     background: #FFFFFF;
     box-shadow: 0 4px 12px 0 rgba(0,0,0,0.15);
+    border-radius:4px;
     position: relative;
     /*margin-right: 12px;
     margin-left: 12px;
