--- a/ui/src/app/views/notebook-list/component.css
+++ b/ui/src/app/views/notebook-list/component.css
@@ -23,6 +23,13 @@
   word-wrap: break-word;
 }
 
+.card.item-card .name.disabled {
+  cursor: not-allowed;
+  word-wrap: break-word;
+  color: #AAAFB4;
+}
+
+
 .card-area {
   display: flex;
   flex-wrap: wrap;
