--- a/ui/src/app/cohort-search/attributes-page/attributes-page.component.html
+++ b/ui/src/app/cohort-search/attributes-page/attributes-page.component.html
@@ -1,27 +1,39 @@
 <div class="title">
   {{node.get('name','')}}
 </div>
-<form *ngIf="node.size" #attrs="ngForm" (ngSubmit)="addAttrs(attrs)">
+<form *ngIf="node.size" #attrForm="ngForm" (ngSubmit)="addAttrs(attrForm)">
   <section class="form-block">
-    <div class="form-group" *ngFor="let field of fields; let i = index">
-      <label>{{field}}</label>
-      <div class="select">
-        <select [name]="'operator'+i" [ngModel]="'='" required>
-          <option value="=">Equals</option>
-          <option value=">=">Greater than or Equal to</option>
-          <option value="<=">Less than or Equal to</option>
-          <option value="between">Between</option>
-        </select>
+    <div *ngFor="let attr of attrs; let i = index">
+      <div class="form-group">
+        <label>{{attr.name}}</label>
+        <div class="select">
+          <select [name]="'operator'+i" [(ngModel)]="attr.operator" (ngModelChange)="selectChange(i, $event)" required>
+            <option value=""></option>
+            <option value="EQUAL">Equals</option>
+            <option value="GREATER_THAN_OR_EQUAL_TO">Greater than or Equal to</option>
+            <option value="LESS_THAN_OR_EQUAL_TO">Less than or Equal to</option>
+            <option value="BETWEEN">Between</option>
+            <option value="ANY">Any</option>
+          </select>
+        </div>
       </div>
-      <input type="number" [name]="'valueA'+i" ngModel required>
-      <label *ngIf="attrs.value['operator'+i] === 'between'">and</label>
-      <input *ngIf="attrs.value['operator'+i] === 'between'" type="number" [name]="'valueB'+i" ngModel required>
+      <div *ngIf="attrForm.value['operator'+i] !== 'ANY'" class="form-group">
+        <input type="number" [name]="'valueA'+i" [ngModel]="attr.operands[0]" required>
+        <span *ngIf="units[node.get('subtype')]">{{units[node.get('subtype')]}}</span>
+      </div>
+      <div *ngIf="attrForm.value['operator'+i] === 'BETWEEN'" class="form-group">
+        <div>and</div>
+      </div>
+      <div *ngIf="attrForm.value['operator'+i] === 'BETWEEN'" class="form-group">
+        <input type="number" [name]="'valueB'+i" [ngModel]="attr.operands[1]" required>
+        <span>{{units[node.get('subtype')]}}</span>
+      </div>
     </div>
     <div class="count-preview">
       <button type="button"
               class="btn"
-              (click)="requestPreview(attrs)"
-              [disabled]="!attrs.valid"
+              (click)="requestPreview(attrForm)"
+              [disabled]="!attrForm.valid"
       >
         Calculate
       </button>
@@ -34,6 +46,6 @@
       </span>
     </div>
     <button class="btn btn-link" type="button" (click)="cancel()">Cancel</button>
-    <button class="btn btn-primary" type="submit" [disabled]="!attrs.valid">Add Item</button>
+    <button class="btn btn-primary" type="submit" [disabled]="!attrForm.valid">Add Item</button>
   </section>
 </form>
