--- a/ui/src/app/cohort-search/node-info/node-info.component.html
+++ b/ui/src/app/cohort-search/node-info/node-info.component.html
@@ -8,8 +8,8 @@
       [disabled]="isSelected"
       (click)="select($event)">
     <clr-icon *ngIf="isSelected" shape="check-circle" size="20" class="selection-icon"></clr-icon>
-    <clr-icon *ngIf="!isSelected && !node.get('attribute')" shape="plus-circle" size="20" class="selection-icon"></clr-icon>
-    <clr-icon *ngIf="!isSelected && node.get('attribute')" shape="cog" size="20" class="selection-icon"></clr-icon>
+    <clr-icon *ngIf="!isSelected && !node.get('hasAttributes')" shape="plus-circle" size="20" class="selection-icon"></clr-icon>
+    <clr-icon *ngIf="!isSelected && node.get('hasAttributes')" shape="cog" size="20" class="selection-icon"></clr-icon>
   </button>
 
   <!-- CODE -->
