--- a/ui/src/app/views/workspace-edit/component.html
+++ b/ui/src/app/views/workspace-edit/component.html
@@ -60,12 +60,9 @@
                     [clrDisabled]="mode == Mode.Edit">
                 </clr-checkbox>
                 <div>
-                  <label class="checkbox-label" for="clr-checkbox-methods-development"><h3>Methods development/validation study</h3></label>
+                  <label class="checkbox-label" for="clr-checkbox-methods-development"><h3>{{researchPurposeItems.methodsDevelopment.shortDescription}}</h3></label>
                   <div>
-                    The primary purpose of the research is to develop and/or validate new methods/tools
-                    for analyzing or interpreting data (for example, developing more powerful methods to detect
-                    epistatic, gene-environment, or other types of complex interactions in genome-wide
-                    association studies). Data will be used for developing and/or validating new methods.
+                    {{researchPurposeItems.methodsDevelopment.longDescription}}
                   </div>
                 </div>
               </div>
@@ -79,10 +76,9 @@
                         [clrDisabled]="mode == Mode.Edit">
                 </clr-checkbox>
                 <div>
-                  <label class="checkbox-label" for="clr-checkbox-aggregate-analysis"><h3>Aggregate analysis to understand variation in general population</h3></label>
+                  <label class="checkbox-label" for="clr-checkbox-aggregate-analysis"><h3>{{researchPurposeItems.aggregateAnalysis.shortDescription}}</h3></label>
                   <div>
-                    The primary purpose of the research is to understand variation in the
-                    general population (for example, genetic substructure of a population).
+                    {{researchPurposeItems.aggregateAnalysis.longDescription}}
                   </div>
                 </div>
               </div>
@@ -98,10 +94,9 @@
                     [clrDisabled]="mode == Mode.Edit">
                 </clr-checkbox>
                 <div>
-                  <label class="checkbox-label" for="clr-checkbox-control-set"><h3>Control Set</h3></label>
+                  <label class="checkbox-label" for="clr-checkbox-control-set"><h3>{{researchPurposeItems.controlSet.shortDescription}}</h3></label>
                   <div>
-                    All of Us data will be used  increase the number of controls available for a
-                    comparison group (for example, a case-control study) to another dataset.
+                    {{researchPurposeItems.controlSet.longDescription}}
                   </div>
                 </div>
               </div>
@@ -115,10 +110,9 @@
                         [clrDisabled]="mode == Mode.Edit">
                 </clr-checkbox>
                 <div>
-                  <label class="checkbox-label" for="clr-checkbox-ancestry"><h3>Population origins or ancestry</h3></label>
+                  <label class="checkbox-label" for="clr-checkbox-ancestry"><h3>{{researchPurposeItems.ancestry.shortDescription}}</h3></label>
                   <div>
-                    The primary purpose of the research is to study the ancestry or origins
-                    of a specific population.
+                    {{researchPurposeItems.ancestry.longDescription}}
                   </div>
                 </div>
               </div>
@@ -134,10 +128,9 @@
                         [clrDisabled]="mode == Mode.Edit">
                 </clr-checkbox>
                 <div>
-                  <label class="checkbox-label" for="clr-checkbox-population"><h3>Restricted to a specific population</h3></label>
+                  <label class="checkbox-label" for="clr-checkbox-population"><h3>{{researchPurposeItems.population.shortDescription}}</h3></label>
                   <div>
-                    This research will focus on a specific population group. For example: a
-                    specific gender, age group or ethnic group.
+                    {{researchPurposeItems.population.longDescription}}
                   </div>
                 </div>
               </div>
@@ -151,9 +144,9 @@
                         [clrDisabled]="mode == Mode.Edit">
                 </clr-checkbox>
                 <div>
-                  <label class="checkbox-label" for="clr-checkbox-commercial-purpose"><h3>Commercial Purpose/entity</h3></label>
+                  <label class="checkbox-label" for="clr-checkbox-commercial-purpose"><h3>{{researchPurposeItems.commercialPurpose.shortDescription}}</h3></label>
                   <div>
-                    The study is conducted by a for-profit entity and/or in support of a commercial activity.
+                    {{researchPurposeItems.commercialPurpose.longDescription}}
                   </div>
                 </div>
               </div>
@@ -170,9 +163,9 @@
                       shape="plus-circle"></clr-icon>
                 </div>
                 <div>
-                  <label class="checkbox-label" (click)="workspace.researchPurpose.containsUnderservedPopulation = !workspace.researchPurpose.containsUnderservedPopulation"><h3>Includes an underserved population</h3></label>
+                  <label class="checkbox-label" (click)="workspace.researchPurpose.containsUnderservedPopulation = !workspace.researchPurpose.containsUnderservedPopulation"><h3>{{researchPurposeItems.containsUnderservedPopulation.shortDescriptions}}</h3></label>
                   <div>
-                    This research will focus on, or include findings on, distinguishing characteristics related to one or more underserved populations
+                    {{researchPurposeItems.containsUnderservedPopulation.longDescription}}
                   </div>
                 </div>
               </div>
