--- a/ui/src/app/views/homepage/component.html
+++ b/ui/src/app/views/homepage/component.html
@@ -12,7 +12,7 @@
                     <div class="row">
                         <label class="text">{{card.text}}</label>
                     </div>
-                    <div class="row heading">
+                    <div class="row button">
                         COMING SOON...
                     </div>
                 </div>
@@ -32,7 +32,7 @@
                         <label class="text">Dolor sit amet consectetuer adipiscing sed diam
                             euismod tincidunt ut laoreet dolore.</label>
                     </div>
-                    <div class="row heading">
+                    <div class="row">
                         <button class="btn btn-homepage" (click)="addWorkspace()">CREATE WORKSPACE</button>
                     </div>
                 </div>
@@ -71,7 +71,7 @@
                                     workspace</a>
                             </div>
                             <div class="col">
-                                <a class="links disabled">See All Notebooks</a>
+                                <a class="links" data-toggle="tooltip" title="Coming Soon">See All Notebooks</a>
                             </div>
                         </div>
                         <div class="row">
@@ -80,7 +80,7 @@
                                     Workspaces</a>
                             </div>
                             <div class="col">
-                                <a class="links disabled">See All Cohorts</a>
+                                <a class="links" href="#" data-toggle="tooltip" title="Coming Soon">See All Cohorts</a>
                             </div>
                         </div>
                     </div>
@@ -101,32 +101,48 @@
         <div class="row">
             <div class="footerTitle">How to Use the AoU Researcher Workbench</div>
         </div>
+        <div class="row">
+            <a href="#" class="footerLink" data-toggle="tooltip" title="Coming Soon">
+                See all documentation</a>
+        </div>
         <div class="row textGroup">
             <div class="footerText">
                 <div class="title">Working Within Researcher Workbench</div>
-                <ul class="bullet">
-                    <li>Researcher Workbench Mission</li>
-                    <li>User interface components</li>
-                    <li>What to do when things go wrong</li>
-                    <li>Contributing to the Workbench</li>
+                <ul class="bullets">
+                    <li><a href="#" class="bullets" data-toggle="tooltip" title="Coming Soon">
+                        Researcher Workbench Mission</a></li>
+                    <li><a href="#" class="bullets" data-toggle="tooltip" title="Coming Soon">
+                        User interface components</a></li>
+                    <li><a href="#" class="bullets" data-toggle="tooltip" title="Coming Soon">
+                        What to do when things go wrong</a></li>
+                    <li><a href="#" class="bullets" data-toggle="tooltip" title="Coming Soon">
+                        Contributing to the Workbench</a></li>
                 </ul>
             </div>
             <div class="footerText">
                 <div class="title">Workspace</div>
                 <ul class="bullet">
-                    <li>Workspace interface components</li>
-                    <li>User interface components</li>
-                    <li>Collaborating with other researchers</li>
-                    <li>Sharing and Publishing Workspaces</li>
+                    <li><a href="#" class="bullets" data-toggle="tooltip" title="Coming Soon">
+                        Workspace interface components</a></li>
+                    <li><a href="#" class="bullets" data-toggle="tooltip" title="Coming Soon">
+                        User interface components</a></li>
+                    <li><a href="#" class="bullets" data-toggle="tooltip" title="Coming Soon">
+                        Collaborating with other researchers</a></li>
+                    <li><a href="#" class="bullets" data-toggle="tooltip" title="Coming Soon">
+                        Sharing and Publishing Workspaces</a></li>
                 </ul>
             </div>
             <div class="footerText">
                 <div class="title">Working with Notebooks</div>
                 <ul class="bullet">
-                    <li>Notebook interface components</li>
-                    <li>Notebooks and data</li>
-                    <li>Collaborating with other researchers</li>
-                    <li>Sharing and Publishing Notebooks</li>
+                    <li><a href="#" class="bullets" data-toggle="tooltip" title="Coming Soon">
+                        Notebook interface components</a></li>
+                    <li><a href="#" class="bullets" data-toggle="tooltip" title="Coming Soon">
+                        Notebooks and data</a></li>
+                    <li><a href="#" class="bullets" data-toggle="tooltip" title="Coming Soon">
+                        Collaborating with other researchers</a></li>
+                    <li><a href="#" class="bullets" data-toggle="tooltip" title="Coming Soon">
+                        Sharing and Publishing Notebooks</a></li>
                 </ul>
             </div>
         </div>
