--- a/ui/src/app/views/homepage/component.css
+++ b/ui/src/app/views/homepage/component.css
@@ -194,7 +194,7 @@
     color: #FFFFFF;
     font-size: 14px;
     line-height: 28px;
-    margin-right: 4%;
+    margin-right: 2rem;
 }
 
 .card.add-card {
