RW-803 correct closing bracket for calculate button

--- a/ui/src/app/cohort-search/attributes-page/attributes-page.component.html
+++ b/ui/src/app/cohort-search/attributes-page/attributes-page.component.html
@@ -33,8 +33,7 @@
       <button type="button"
               class="btn"
               [disabled]="!attrForm.valid"
-              (click)="requestPreview(attrForm)"
-      >
+              (click)="requestPreview(attrForm)">
         Calculate
       </button>
       Number Participants:
