[RW-803][risk=no] Add physical measurements search in CB (#990)
* RW-803 init of PM criteria.

* RW-803 reconfig measurement tree.

* RW-803 reverting PM tree.

* RW-803 removed PM api stuff.

* RW-803 added action stub to wizard

* RW-803 update csv and changelog files

* RW-803 add attributes-page component

* RW-803 add attributes-page view modal

* RW-803 add attributes-select component

* RW-803 partially completed attributes form

* RW-803 complete form for PM attributes

* RW-803 add form validation for attributes

* RW-803 add names and codes to selected params

* RW-803 correct type error for redux action

* RW-803 trying to update selection state in redux

* RW-803 fix isSelelcted state for PM detail criteria

* RW-803 code cleanup

* RW-803 removed unused attributes-select component

* RW-803 add placeholder Calculate button to attributes page

* RW-803 add function for Calculate button

* RW-803 correct attribute text in selection list

* RW-803 fix ts warnings

* RW-803 clear atrributes form state on finish or cancel

* RW-803 add attribute property to criteria requests

* RW-803 add attribute property to api/model

* RW-803 update css to fix PM indentation

* removed csv changes that need to be in RW-803

* remove api code from this branch.

* RW-803 change attributes to list, add redux actions

* RW-803 change attribute to hasAttributes

* RW-803 fix BP any query

* RW-803 re-order attributes for count preview button

* RW-803 add single quotes to all properties for PM_UNITS constant

* RW-803 correct closing bracket for calculate button

--- a/ui/src/app/cohort-search/modal/modal.component.html
+++ b/ui/src/app/cohort-search/modal/modal.component.html
@@ -12,6 +12,7 @@
             Criteria Tree
           </button>
           <button type="button" class="btn"
+            *ngIf="ctype !== 'pm'"
             [class.active]="mode === 'modifiers'"
             (click)="mode = 'modifiers'">
             Modifiers
@@ -45,7 +46,7 @@
         </crit-demographics>
 
         <ng-container *ngSwitchDefault>
-          <div id="tree" class="panel" [class.show]="mode === 'tree' || mode === 'modifiers'">
+          <div id="tree" class="panel" [class.show]="mode === 'tree' || mode === 'modifiers' || mode === 'attributes'">
             <!-- Tree Page -->
             <div class="panel-left" [class.show]="mode === 'tree'">
               <crit-tree [node]="rootNode"></crit-tree>
@@ -53,6 +54,10 @@
             <!-- Modifiers Page -->
             <div class="panel-left" [class.show]="mode === 'modifiers'">
               <crit-modifier-page></crit-modifier-page>
+            </div>
+            <!-- Attributes Page -->
+            <div class="panel-left" [class.show]="mode === 'attributes'">
+              <crit-attributes-page [node]="attributesNode"></crit-attributes-page>
             </div>
             <div class="panel-right selected">
               <h5 class="selection-title">{{ selectionTitle }}</h5>
