--- a/ui/src/app/cohort-search/search-group/search-group.component.html
+++ b/ui/src/app/cohort-search/search-group/search-group.component.html
@@ -12,15 +12,16 @@
           id="criteria.type"
           class="dropdown-item"
           type="button"
+          [disabled]="criteria.disabled"
           (click)="launchWizard(criteria.type)"
           clrDropdownItem>{{criteria.name}}</button>
         <div class="dropdown-divider"></div>
         <h4 class="dropdown-header">Domains</h4>
-        <button
-          *ngFor="let criteria of domainTypes"
+        <button *ngFor="let criteria of domainTypes"
           id="criteria.type"
           class="dropdown-item"
           type="button"
+          [disabled]="criteria.disabled"
           (click)="launchWizard(criteria.type)"
           clrDropdownItem>{{criteria.name}}</button>
       </clr-dropdown-menu>
