--- a/ui/src/app/views/homepage/component.css
+++ b/ui/src/app/views/homepage/component.css
@@ -16,12 +16,11 @@
 }
 
 .left {
-    margin-left: 55%;
-    position: relative;
+    margin-left: 14.4rem;
 }
 
 .right {
-    margin-left: 59%;
+    margin-left: 0.8rem;
 }
 
 .single {
@@ -30,7 +29,7 @@
     border-radius: 5px;
     background-color: rgba(255, 255, 255, 0.15);
     box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.12), 0 3px 2px 0 rgba(0, 0, 0, 0.12);
-    margin-left: 18%;
+    margin-left: 14.4rem;
 }
 
 .analyzeSingleHeader {
@@ -229,6 +228,6 @@
 }
 
 .footerLink {
-    margin-left: 74%;
+    margin-left: 53rem;
     color: #FFFFFF;
 }
